@@ -17,7 +17,11 @@ Formulator changes
         UTF-8 (or whatever encoding you choose for the form) things
         should be okay, however.
 
-     - XXX xml export/import which currently is latin1.
+      - Should fix XML export/import which currently is in latin1..
+
+    Bugs Fixed
+   
+      - Fixed a Python2.2 compatibility bug in XMLObjects.py
 
   1.3.1 (2002/12/20)
 
